# Live2D-for-JVM

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.gradle  local.properties  settings.gradle
Native/Live2DCubismCoreJNI/: moe_leekcake_live2dforjvm_Live2DCubismCoreJNI.c  moe_leekcake_live2dforjvm_Live2DCubismCoreJNI.cpp  moe_leekcake_live2dforjvm_Live2DCubismCoreJNI.h  moe_leekcake_live2dforjvm_core_jni_Live2DCubismCoreJNI.c  moe_leekcake_live2dforjvm_core_jni_Live2DCubismCoreJNI.h
Native/Live2DCubismFrameworkJNI/: moe_leekcake_live2dforjvm_Live2DCubismFrameworkJNI.c  moe_leekcake_live2dforjvm_Live2DCubismFrameworkJNI.cpp  moe_leekcake_live2dforjvm_Live2DCubismFrameworkJNI.h  moe_leekcake_live2dforjvm_framework_jni_CubismFrameworkJNI.cpp  moe_leekcake_live2dforjvm_framework_jni_CubismFrameworkJNI.h
Native/Live2DCubismFrameworkJNI/effect/: moe_leekcake_live2dforjvm_framework_jni_effect_CubismBreathJNI.h  moe_leekcake_live2dforjvm_framework_jni_effect_CubismBreathJNI_BreathParameterData.h
Native/Live2DCubismFrameworkJNI/extend/: moe_leekcake_live2dforjvm_framework_jni_extend_ExtendModelJNI.cpp  moe_leekcake_live2dforjvm_framework_jni_extend_ExtendModelJNI.h  moe_leekcake_live2dforjvm_framework_jni_extend_ExtendModelJNI_MotionEventFireable.h  moe_leekcake_live2dforjvm_framework_jni_extend_ExtendPALJNI.cpp  moe_leekcake_live2dforjvm_framework_jni_extend_ExtendPALJNI.h  moe_leekcake_live2dforjvm_framework_jni_extend_ExtendPALJNI_TextureProvider.h
Native/Live2DCubismFrameworkJNI/extend_cpp/: JNIHelper.h  JavaAllocator.cpp  JavaAllocator.hpp  JavaDefine.cpp  JavaDefine.hpp  JavaModel.cpp  JavaModel.hpp  JavaPal.cpp  JavaPal.hpp
Native/Live2DCubismFrameworkJNI/id/: moe_leekcake_live2dforjvm_framework_jni_id_CubismIdJNI.cpp  moe_leekcake_live2dforjvm_framework_jni_id_CubismIdJNI.h  moe_leekcake_live2dforjvm_framework_jni_id_CubismIdManagerJNI.cpp  moe_leekcake_live2dforjvm_framework_jni_id_CubismIdManagerJNI.h
Native/Live2DCubismFrameworkJNI/math/: moe_leekcake_live2dforjvm_framework_jni_math_CubismMatrix44JNI.cpp  moe_leekcake_live2dforjvm_framework_jni_math_CubismMatrix44JNI.h
Native/Live2DCubismGLRenderingJNI/: moe_leekcake_live2dforjvm_Live2DCubismGLRenderingJNI.c  moe_leekcake_live2dforjvm_Live2DCubismGLRenderingJNI.cpp  moe_leekcake_live2dforjvm_Live2DCubismGLRenderingJNI.h
Native/MemoryAccessJNI/: moe_leekcake_live2dforjvm_MemoryAccessJNI.c  moe_leekcake_live2dforjvm_MemoryAccessJNI.cpp  moe_leekcake_live2dforjvm_MemoryAccessJNI.h  moe_leekcake_live2dforjvm_core_jni_MemoryAccessJNI.c  moe_leekcake_live2dforjvm_core_jni_MemoryAccessJNI.h
gradle/wrapper/: gradle-wrapper.properties
sample/: build.gradle
sample-android/: build.gradle  proguard-rules.pro
sample-android/src/main/: AndroidManifest.xml
sample-android/src/main/assets/: Koharu.moc3  Koharu.motion3.json
sample-android/src/main/java/moe/leekcake/hellocubism/: MainActivity.kt  Utils.kt
sample-android/src/main/res/values/: strings.xml
sample-hiyori/: ReadMe.txt  hiyori.moc3  hiyori.model3.json  hiyori_m01.motion3.json  hiyori_m02.motion3.json  hiyori_m03.motion3.json  hiyori_m04.motion3.json  hiyori_m05.motion3.json  hiyori_m06.motion3.json  hiyori_m07.motion3.json  hiyori_m08.motion3.json  hiyori_m09.motion3.json  hiyori_m10.motion3.json
sample-windows/: build.gradle
sample-windows/src/main/kotlin/moe/leekcake/live2dforjvm/sample/: SampleLauncher.kt  Texture.kt
sample/src/main/kotlin/moe/leekcake/live2dforjvm/sample/: SampleApp.kt  SampleLauncher.kt  Texture.kt
sample/src/main/kotlin/moe/leekcake_live2dforjvm/sample/: SampleGLApp.kt
